@@ -124,7 +124,14 @@ subprojects {
 
             // 테스트 시 아래와 같은 예외 메시지를 제거하기 위해서
             // OpenJDK 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended
-            jvmArgs("-Xshare:off", "-Xmx8G")
+            jvmArgs(
+                "-XX:+UseZGC",
+                "-Xshare:off",
+                "-Xmx8G",
+                "-XX:+EnableDynamicAgentLoading",
+                "-XX:+UnlockExperimentalVMOptions",
+                "-XX:+UseDynamicNumberOfGCThreads",
+            )
 
             if (project.name.contains("quarkus")) {
                 // [Quarkus Logging](https://quarkus.io/guides/logging)
@@ -156,73 +163,6 @@ subprojects {
             reportMerge.configure {
                 input.from(this@detekt.xmlReportFile)
             }
-        }
-
-//        jacoco {
-//            toolVersion = Plugins.Versions.jacoco
-//        }
-//
-//        jacocoTestReport {
-//            reports {
-//                html.required.set(true)
-//                xml.required.set(true)
-//            }
-//        }
-//
-//        jacocoTestCoverageVerification {
-//            dependsOn(jacocoTestReport)
-//
-//            violationRules {
-//                rule {
-//                    // 룰 검증 수행 여부
-//                    enabled = true
-//
-//                    // 룰을 검증할 단위를 클래스 단위로 한다
-//                    element = "CLASS"         // BUNDLE|PACKAGE|CLASS|SOURCEFILE|METHOD
-//
-//                    // 브랜치 커버리지를 최소한 10% 를 만족시켜야 한다
-//                    limit {
-//                        counter =
-//                            "INSTRUCTION"       // INSTRUCTION, LINE, BRANCH, COMPLEXITY, METHOD and CLASS. Defaults to INSTRUCTION.
-//                        value =
-//                            "COVEREDRATIO"   // TOTALCOUNT, MISSEDCOUNT, COVEREDCOUNT, MISSEDRATIO and COVEREDRATIO. Defaults to COVEREDRATIO
-//                        minimum = 0.10.toBigDecimal()
-//                    }
-//                }
-//            }
-//        }
-//
-//        jacocoTestCoverageVerification {
-//            dependsOn(jacocoTestReport)
-//
-//            violationRules {
-//                rule {
-//                    // 룰 검증 수행 여부
-//                    enabled = true
-//
-//                    // 룰을 검증할 단위를 클래스 단위로 한다
-//                    element = "CLASS"         // BUNDLE|PACKAGE|CLASS|SOURCEFILE|METHOD
-//
-//                    // 브랜치 커버리지를 최소한 10% 를 만족시켜야 한다
-//                    limit {
-//                        counter =
-//                            "INSTRUCTION"       // INSTRUCTION, LINE, BRANCH, COMPLEXITY, METHOD and CLASS. Defaults to INSTRUCTION.
-//                        value =
-//                            "COVEREDRATIO"   // TOTALCOUNT, MISSEDCOUNT, COVEREDCOUNT, MISSEDRATIO and COVEREDRATIO. Defaults to COVEREDRATIO
-//                        minimum = 0.10.toBigDecimal()
-//                    }
-//                }
-//            }
-//        }
-
-        jar {
-            manifest.attributes["Specification-Title"] = project.name
-            manifest.attributes["Specification-Version"] = project.version
-            manifest.attributes["Implementation-Title"] = project.name
-            manifest.attributes["Implementation-Version"] = project.version
-            manifest.attributes["Automatic-Module-Name"] = project.name.replace('-', '.')
-            manifest.attributes["Created-By"] =
-                "${System.getProperty("java.version")} (${System.getProperty("java.specification.vendor")})"
         }
 
         // https://kotlin.github.io/dokka/1.6.0/user_guide/gradle/usage/
@@ -549,15 +489,4 @@ subprojects {
         // Byte Buddy
         implementation(Libs.byte_buddy_agent)
     }
-
-    tasks.withType<Jar> {
-        manifest.attributes["Specification-Title"] = project.name
-        manifest.attributes["Specification-Version"] = project.version
-        manifest.attributes["Implementation-Title"] = project.name
-        manifest.attributes["Implementation-Version"] = project.version
-        manifest.attributes["Automatic-Module-Name"] = project.name.replace('-', '.')
-        manifest.attributes["Created-By"] =
-            "${System.getProperty("java.version")} (${System.getProperty("java.specification.vendor")})"
-    }
-
 }
